fix tag to no wrapping

--- a/src/components/Tag/index.css
+++ b/src/components/Tag/index.css
@@ -9,6 +9,7 @@
   line-height: 1.6em;
   font-size: 0.8em;
   margin: 0.3em 0;
+  white-space: nowrap;
 
   & > span {
     margin-right: 0.5em;
